# rust-c-ares

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  appveyor.yml  build.rs  install-rust.ps1  publish-docs.sh  publish-key.enc
.github/: copilot-instructions.md  dependabot.yml
.github/copilot/skills/: update-c-ares-bindings.md
.github/workflows/: build.yml  release.yml
c-ares/: CHANGELOG.md  Cargo.toml  README.md  build.rs
c-ares-resolver/: CHANGELOG.md  Cargo.toml  README.md  build.rs
c-ares-resolver/examples/: blocking.rs  callback.rs  dnsrec.rs  futures.rs  send_dnsrec.rs
c-ares-resolver/src/: blockingresolver.rs  dns_opt.rs  error.rs  eventloop.rs  futureresolver.rs  host.rs  lib.rs  nameinfo.rs  resolver.rs
c-ares-resolver/tests/: blocking_resolver.rs  callback_resolver.rs  future_resolver.rs  panic_abort.rs
c-ares-resolver/tests/common/: mod.rs
c-ares-sys/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  ffi.patch  generate-constants.pl  generate-ffi.sh
c-ares-sys/src/: constants.rs  ffi.rs  lib.rs
c-ares/examples/: dnsrec.rs  epoll.rs  event_thread.rs  getaddrinfo.rs  select.rs  version.rs
c-ares/src/: a.rs  aaaa.rs  addrinfo.rs  caa.rs  channel.rs  cname.rs  error.rs  events.rs  flags.rs  host.rs  lib.rs  macros.rs  mx.rs  nameinfo.rs  naptr.rs  ni_flags.rs  ns.rs  panic.rs  ptr.rs  query.rs  record.rs  server_state_flags.rs  soa.rs  srv.rs  string.rs  txt.rs  types.rs  uri.rs  utils.rs
c-ares/src/channel/: mod.rs  options.rs  sockets.rs
c-ares/src/dns/: callback.rs  dns_opt.rs  enums.rs  mod.rs  record.rs  rr.rs  typed.rs
c-ares/tests/: channel.rs  error_cases.rs  host_and_nameinfo.rs  query.rs  query_dnsrec.rs  search.rs
c-ares/tests/common/: mod.rs
examples/: .cares-resolver.rs.swp  cares-epoll-resolver.rs  cares-epoll.rs  cares-event-loop-2.rs  cares-event-loop-resolver.rs  cares-event-loop.rs  cares-examples.rs  cares-resolver.rs  cares-windows-select.rs  epoll-resolver.rs  epoll.rs  event-loop.rs  futures.rs  select.rs  version.rs
examples/unix/: cares_epoll.rs  cares_epoll_resolver.rs  cares_event_loop.rs  cares_event_loop_resolver.rs  cares_futures.rs  mod.rs
examples/windows/: cares_select.rs  mod.rs
src/: a.rs  aaaa.rs  caa.rs  callbacks.rs  channel.rs  cname.rs  ctypes.rs  error.rs  events.rs  flags.rs  getsock.rs  host.rs  hostent.rs  lib.rs  macros.rs  mx.rs  nameinfo.rs  naptr.rs  ni_flags.rs  ns.rs  panic.rs  parsers.rs  ptr.rs  query.rs  server_state_flags.rs  soa.rs  socket.rs  srv.rs  string.rs  tests.rs  txt.rs  types.rs  uri.rs  utils.rs
tests/: dns.rs  host_and_nameinfo.rs  integration.rs  query.rs  result_accessors.rs  search.rs
tests/common/: mod.rs
