[package]
name = "c-ares"
license = "MIT"
version = "7.5.1"
authors = ["David Hotham"]
description = """
A Rust wrapper for the c-ares library, for asynchronous DNS requests.
"""
repository = "https://github.com/dimbleby/rust-c-ares"
documentation = "https://docs.rs/c-ares"
readme = "README.md"
keywords = ["DNS", "c-ares"]
categories = ["api-bindings", "asynchronous", "network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
bitflags = "1"
c-ares-sys = { version = "5.3.2", path = "c-ares-sys" }
c-types = "2.0.2"
itertools = "0.10"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.23"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["winsock2"] }

[features]
default = []
build-cmake = ["c-ares-sys/build-cmake"]

[workspace]
