[package]
name = "c-ares"
license = "MIT"
version = "8.0.0"
authors = ["David Hotham"]
description = """
A Rust wrapper for the c-ares library, for asynchronous DNS requests.
"""
repository = "https://github.com/dimbleby/rust-c-ares"
documentation = "https://docs.rs/c-ares"
readme = "README.md"
keywords = ["DNS", "c-ares"]
categories = ["api-bindings", "asynchronous", "network-programming"]
edition = "2021"
include = [
  "/CHANGELOG.md",
  "/LICENSE.txt",
  "/README.md",
  "/build.rs",
  "/src",
]

[dependencies]
bitflags = "2.0"
c-ares-sys = { version = "8.0.0", path = "c-ares-sys", default-features = false }
c-types = "3.0.0"
itertools = "0.11"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", default-features = false, features = ["event"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Networking_WinSock"] }

[features]
default = ["maybe-vendored"]
maybe-vendored = ["c-ares-sys/maybe-vendored"]
vendored = ["c-ares-sys/vendored"]
build-cmake = ["c-ares-sys/build-cmake"]

[workspace]
