[package]
name = "c-ares-sys"
version = "11.0.0"
build = "build/main.rs"
links = "cares"
description = "Low-level bindings to the c-ares library"
readme = "README.md"
keywords = ["DNS", "c-ares"]
categories = ["external-ffi-bindings", "network-programming"]
edition.workspace = true
license.workspace = true
repository.workspace = true
include = [
  "/CHANGELOG.md",
  "/LICENSE.txt",
  "/README.md",
  "/build",
  "/c-ares",
  "/src",
]

[package.metadata.docs.rs]
features = ["vendored"]

[build-dependencies]
cc = "1.0.61"
fs_extra = "1.3"
pkg-config = "0.3.9"
vcpkg = "0.2.8"
cmake = { version = "0.1", optional = true }

[dependencies]
libc = "0.2"
c-types.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.4"

[features]
default = ["maybe-vendored"]
maybe-vendored = []
vendored = ["maybe-vendored"]
build-cmake = ["cmake"]
